--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "lint": "eslint src --ext .ts,.tsx",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -15,7 +16,11 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "standard": "^16.0.4",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
