--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "todomvc-app-css": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
