--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@vitejs/plugin-react": "^1.0.7",
     "standard": "^16.0.4",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "vite-tsconfig-paths": "^3.4.1"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
