--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
-    "standard": "^16.0.4",
     "ts-standard": "^11.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
     "vite-tsconfig-paths": "^3.4.1"
   },
   "eslintConfig": {
-    "extends": "./node_modules/ts-standard/eslintrc.json"
+    "extends": [
+      "./node_modules/ts-standard/eslintrc.json"
+    ],
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    }
   }
 }
